Use VarHandle instead of Unsafe on Java 9+